#### Don't forget to change the version number in configure.ac! ####

17 Auf 2003 Re-instated fast dev lookup as a cache facility
            Thanks Fish for the suggestions - Ivan Warren
17 Aug 2003 Disabled Fast devnum & subchan lookup because of
            some incompatibilities / reported by yvangamache - Ivan Warren
16 Aug 2003 fix tt32stats command when OPTION_DYNAMIC_LOAD - Fish
16 Aug 2003 fix CTCI segfault caused by bug in build_config when
            OPTION_CONFIG_SYMBOLS specified - Fish
16 Aug 2003 fix 'make install-strip' issue with dyn devices identified
            by yvangamache [yvangamache@hotmail.com]  -- Fish
16 Aug 2003 copytape (hetupd.c), main (hetmap.c), het_read, het_write
            (hetlib.c): define global static I/O buffers to work around
            pre gcc 3.2 bug #8750 identified on "04 Jan 2003" - Fish
            http://gcc.gnu.org/bugzilla/show_bug.cgi?id=8750
15 Aug 2003 Compress ESAME psw in semi graphic panel - Jan Jaeger
14 Aug 2003 Updated dasdutil.c for HDL compatibility - Ivan Warren
14 Aug 2003 Added D/T 3422,3430 to hdteq & tapedev(hdt3420) - Ivan Warren
14 Aug 2003 Cosmetics : Correct HHCTE006A Prompt - Ivan Warren
14 Aug 2003 Fast Devnum & Subchannel lookup algorithm - Ivan Warren
11 Aug 2003 Dequeued IOINT struct off of sysblk.iointq during
            TIO/TSCH to prevent incorrect PCI/Final irpt reordering.
            OS360/MVT Now IPLs correctly.
            All changed marked with "ISW20030812" - Ivan Warren
08 Aug 2003 2.17.b2: fixed incorrectly typed thread functions - Fish
            all thread functions s/b "void *thread(void *arg)", not
            void thread(void *arg) or void *thread() or anything else
08 Aug 2003 Increased 2311 Alt Cyl count from 2 to 3 - Ivan Warren
07 Aug 2003 Codepage extensions (iconv) - Jan Jaeger
05 Aug 2003 Dynamic loadable device support - Jan Jaeger
01 Aug 2003 Created RELEASE.NOTES member - Fish
01 Aug 2003 Added Hercules VERSION to dyngui - Fish