@@ -1,6 +1,8 @@
 #### Don't forget to change the version number in configure.ac! ####
 
-17 Auf 2003 Re-instated fast dev lookup as a cache facility
+19 Aug 2003 Allow Write Record 0 after Write Home Address on CKDs
+            problem initially reported by Jay Jaeger(cube1us) - Ivan Warren
+18 Aug 2003 Re-instated fast dev lookup as a cache facility
             Thanks Fish for the suggestions - Ivan Warren
 17 Aug 2003 Disabled Fast devnum & subchan lookup because of
             some incompatibilities / reported by yvangamache - Ivan Warren
